# rfnoc-difi

./: README.md
difipack-cpp/: CMakeLists.txt  README.md
difipack-cpp/docs/: CMakeLists.txt  Doxyfile.in
difipack-cpp/examples/: CMakeLists.txt  README.md  uhd_to_difi.cpp
difipack-cpp/include/difipack/: common.hpp  data_packet.hpp  packet.hpp  prologue.hpp  standard_context_packet.hpp  version_context_packet.hpp
difipack-cpp/lib/: CMakeLists.txt  packet.cpp
difipack-cpp/lib/data_packet/: CMakeLists.txt  builder.cpp  data_packet.cpp
difipack-cpp/lib/prologue/: CMakeLists.txt  builder.cpp  prologue.cpp
difipack-cpp/lib/standard_context_packet/: CMakeLists.txt  builder.cpp  data_packet_payload_format.cpp  standard_context_packet.cpp  state_and_event_ind.cpp
difipack-cpp/lib/utils/: CMakeLists.txt  bit_utils.hpp  bitset_utils.hpp  packing_utils.hpp
difipack-cpp/lib/version_context_packet/: CMakeLists.txt  builder.cpp  version_context_packet.cpp
difipack-cpp/test/: CMakeLists.txt  test_data_packet.cpp  test_standard_context_packet.cpp  test_version_context_packet.cpp
fpga_image/: streaming_difi_basic.dts  streaming_difi_basic.rpt
oot_rfnoc_difi/: CMakeLists.txt  README.md
oot_rfnoc_difi/apps/: CMakeLists.txt  init_difi_block.cpp
oot_rfnoc_difi/blocks/: difi.yml  difi_basic.yml  remake_block.sh
oot_rfnoc_difi/fpga/: CMakeLists.txt  Makefile.srcs
oot_rfnoc_difi/fpga/ip/mult_64_1e12_5p_ce/: Makefile.inc  mult_64_1e12_5p_ce.xci
oot_rfnoc_difi/fpga/ip/mult_64_64_6p_ce/: Makefile.inc  mult_64_64_6p_ce.xci
oot_rfnoc_difi/fpga/rfnoc_block_difi/: Makefile  Makefile.srcs  chdr_difi_timestamp_converter.sv  noc_shell_difi.v  rfnoc_block_difi.v  rfnoc_block_difi_tb.sv  rfnoc_difi_regs.vh
oot_rfnoc_difi/fpga/rfnoc_block_difi/xsim_proj/: xsim_proj.xpr
oot_rfnoc_difi/fpga/rfnoc_block_difi/xsim_proj/xsim_proj.cache/wt/: gui_handlers.wdf  webtalk_pa.xml
oot_rfnoc_difi/fpga/rfnoc_block_difi/xsim_proj/xsim_proj.hw/: xsim_proj.lpr
oot_rfnoc_difi/fpga/rfnoc_block_difi/xsim_proj/xsim_proj.ip_user_files/ip/mult_64_1e12_5p_ce/: mult_64_1e12_5p_ce.veo  mult_64_1e12_5p_ce.vho
oot_rfnoc_difi/fpga/rfnoc_block_difi/xsim_proj/xsim_proj.ip_user_files/ip/mult_64_64_6p_ce/: mult_64_64_6p_ce.veo  mult_64_64_6p_ce.vho
oot_rfnoc_difi/fpga/rfnoc_block_difi/xsim_proj/xsim_proj.sim/sim_1/behav/xsim/: compile.sh  elaborate.sh  rfnoc_block_difi_tb.tcl  rfnoc_block_difi_tb_behav.wdb  rfnoc_block_difi_tb_vhdl.prj  rfnoc_block_difi_tb_vlog.prj  simulate.sh  webtalk.jou  xelab.pb  xsim.ini  xvhdl.pb  xvlog.pb
oot_rfnoc_difi/fpga/rfnoc_block_difi/xsim_proj/xsim_proj.sim/sim_1/behav/xsim/xsim.dir/rfnoc_block_difi_tb_behav/: Compile_Options.txt  xsim.dbg  xsim.mem  xsim.reloc  xsim.rlx  xsim.rtti  xsim.svtype  xsim.type  xsim.xdbg  xsimk
oot_rfnoc_difi/fpga/rfnoc_block_difi/xsim_proj/xsim_proj.sim/sim_1/behav/xsim/xsim.dir/xil_defaultlib/: $unit_@axi@stream@if_sv.sdb  @axi@stream@if.sdb  @axi@stream@packet@if.sdb  @pkg@axi@stream@bfm.sdb  @pkg@axis@ctrl@bfm.sdb  @pkg@chdr@bfm.sdb  @pkg@chdr@data.sdb  axi_demux.sdb  (+47 more)
oot_rfnoc_difi/fpga/rfnoc_block_difi_basic/: Makefile  Makefile.srcs  noc_shell_difi_basic.v  rfnoc_block_difi_basic.v  rfnoc_block_difi_basic_tb.sv
oot_rfnoc_difi/icores/: .gitignore  CMakeLists.txt  x410_100_rfnoc_difi_basic_image_core.yml  x410_100_rfnoc_difi_image_core.yml
oot_rfnoc_difi/include/difipack/: CMakeLists.txt
oot_rfnoc_difi/include/rfnoc/difi/: CMakeLists.txt  difi_block_control.hpp
oot_rfnoc_difi/lib/: CMakeLists.txt  difi_block_control.cpp
(+1 files in other folders)
